# libplist-posix

./: .gitignore  AUTHORS  COPYING  Makefile.am  ProjectHome.md  README  bootstrap  configure.ac
src/: Makefile.am  plist.c  plist.h  plist_txt.c  plist_txt.h
tests/: Atffile  Makefile.am  t_plist.c
